feat(#162)!: migrate to `org.citrusframework@4.0.0-M1`
upgrade citrus core from `com.consol.citrus` to `org.citrusframework` dependency.
that includes some transitive dependency updates/migrations, also in order to
support a jdk17 build minimum:
* `javax` to `jakarta`
* `org.springframework`
* `org.springframework.boot`

BREAKING CHANGE: contains breaking dependency updates!